feat: rename github account

--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -3,8 +3,8 @@ tap "homebrew/cask"
 tap "aws/tap"
 tap "graalvm/tap"
 tap "heroku/brew"
-tap "hiroga-cc/aws-session-manager-plugin"
-tap "hiroga-cc/tap"
+tap "xhiroga/aws-session-manager-plugin"
+tap "xhiroga/tap"
 tap "mongodb/brew"
 # tap "octave-app/octave-app"
 tap "TylerBrock/saw"
