--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -42,7 +42,8 @@
   },
   "[typescript]": {
     "editor.formatOnSave": true,
-    "editor.formatOnPaste": true
+    "editor.formatOnPaste": true,
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[yaml]": {
     "editor.autoIndent": "none",
