make to check diff

--- a/macos-dev/makefile
+++ b/macos-dev/makefile
@@ -1,10 +1,13 @@
+RUSTUP = ~/.cargo/bin/rustup
+
 .PHONY: update install ex clean;
 
 ex: rust;
 
 clean: clean-rust;
 
-rust:
+rust: $(RUSTUP);
+$(RUSTUP):
 	rustup=$(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs)
 	sh -c "${rustup}" -- "-y"
 	# https://www.rust-lang.org/tools/install
