move haskell to ex

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -195,6 +195,7 @@
     "findutils",
     "fqdn",
     "getopt",
+    "ghcup",
     "gibo",
     "gitlens",
     "gnupg",
@@ -249,6 +250,7 @@
     "postgres",
     "postgresql",
     "printf",
+    "proto",
     "psgrep",
     "psql",
     "pstree",
