--- a/macos-dev/makefile
+++ b/macos-dev/makefile
@@ -1,10 +1,23 @@
 RUSTUP = ~/.cargo/bin/rustup
+GHCUP = ~/.ghcup
 
 .PHONY: update install ex clean;
 
-ex: rust;
+install: core;
+
+ex: haskell rust;
+
+core:
+	./install
 
 clean: clean-rust;
+
+haskell: $(GHCUP);
+$(GHCUP):
+	curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
+
+clean-haskell:
+	rm -rf $(GHCUP)
 
 rust: $(RUSTUP);
 $(RUSTUP):
