install java by sdkman

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -143,6 +143,7 @@
     "Unblended",
     "Vercel",
     "adoptopenjdk",
+    "adpt",
     "amazonaws",
     "amzn",
     "anyenv",
@@ -263,6 +264,7 @@
     "rekognition",
     "resolv",
     "rustup",
+    "sdkman",
     "secretsmanager",
     "serverless",
     "shellcheck",
