--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -264,6 +264,7 @@
     "rekognition",
     "resolv",
     "rustup",
+    "rustwasm",
     "sdkman",
     "secretsmanager",
     "serverless",
@@ -282,6 +283,7 @@
     "untap",
     "upsert",
     "userpool",
+    "vendored",
     "videoinput",
     "virtualbox",
     "vpccidr",
