--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -67,6 +67,7 @@
   "python.linting.pylintEnabled": true,
   "python.linting.flake8Enabled": true,
   "python.linting.mypyEnabled": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
   // AWS CloudFormation
   "yaml.customTags": [
     "!Ref",
