update brew file

--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -31,7 +31,6 @@ brew "aws-session-manager-plugin"
 brew "bash"
 brew "bash-completion"
 brew "chamber"
-brew "chromedriver"
 brew "circleci"
 brew "cookiecutter"
 brew "csvkit"
@@ -86,6 +85,7 @@ cask "adobe-creative-cloud"
 cask "adoptopenjdk"
 cask "alfred"
 cask "aws-vault"
+cask "chromedriver"
 cask "cocoapods"
 cask "dash"
 # cask "dbeaver-community" # has invocation problem at 2020-04-14 now. please install from https://dbeaver.io/download/
