install robo-3t as mongo client

--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -109,6 +109,7 @@ cask "mongodb-compass"
 cask "ngrok"
 cask "onedrive"
 cask "postman"
+cast "robo-3t"
 cask "skype"
 cask "slack"
 cask "stoplight-next"
