--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -94,6 +94,7 @@ cask "discord"
 cask "diskwave"
 cask "docker"
 cask "fork"
+cask "github"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "google-drive-file-stream"
@@ -109,7 +110,7 @@ cask "mongodb-compass"
 cask "ngrok"
 cask "onedrive"
 cask "postman"
-cast "robo-3t"
+cask "robo-3t"
 cask "skype"
 cask "slack"
 cask "stoplight-next"
