install little-snitch and micro-snitch

--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -107,6 +107,8 @@ cask "jetbrains-toolbox"
 cask "kap"
 cask "kindle"
 cask "karabiner-elements"
+cask "little-snitch"
+cask "micro-snitch"
 cask "mongodb-compass"
 cask "ngrok"
 cask "onedrive"
