--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -132,6 +132,7 @@
     "Datadog",
     "Earthfile",
     "Elgato",
+    "GOPATH",
     "Hostnames",
     "Intellij",
     "Ionicons",
@@ -204,6 +205,7 @@
     "fastlane",
     "feacebook",
     "filemaker",
+    "findstring",
     "findutils",
     "firestore",
     "fqdn",
@@ -222,6 +224,8 @@
     "hiroaki",
     "hiroga",
     "hoken",
+    "ifeq",
+    "ifneq",
     "imageoptim",
     "imei",
     "inkdrop",
@@ -279,6 +283,7 @@
     "pylint",
     "pypi",
     "pyspark",
+    "rbenv",
     "readlink",
     "redhat",
     "rekognition",
