--- a/sample.env
+++ b/sample.env
@@ -2,3 +2,5 @@ EMAIL=****
 USER_NAME=****
 MICRO_SNITCH_LICENSE_KEYS=****
 LITTLE_SNITCH_LICENSE_KEYS=****
+GITHUB_USER=****
+GITHUB_PERSONAL_TOKEN=****
