--- a/applications/vscode/User/settings.json
+++ b/applications/vscode/User/settings.json
@@ -1,5 +1,6 @@
 {
   "breadcrumbs.enabled": true, // パンくずリスト
+  "diffEditor.ignoreTrimWhitespace": false,
   "editor.formatOnSave": true,
   "editor.renderWhitespace": "all",
   "explorer.confirmDelete": false,
@@ -9,7 +10,6 @@
     "Jenkinsfile*": "groovy"
   },
   "git.autofetch": true,
-  "window.zoomLevel": 0,
   "workbench.sideBar.location": "right",
   // languages
   "java.configuration.checkProjectSettingsExclusions": false,
@@ -124,6 +124,7 @@
   "cSpell.userWords": [
     "Akka",
     "Arns",
+    "Brewfile",
     "CNAME",
     "CORS",
     "Cognito",
@@ -171,6 +172,7 @@
     "botocore",
     "chmod",
     "chromedriver",
+    "chsh",
     "cidr",
     "circleci",
     "classpath",
@@ -210,11 +212,14 @@
     "firestore",
     "fqdn",
     "fronend",
+    "gcloud",
     "getopt",
     "ghcup",
     "gibo",
     "gitlens",
+    "gitmessage",
     "gmail",
+    "gnubin",
     "gnupg",
     "gnutls",
     "graalvm",
@@ -229,6 +234,7 @@
     "imageoptim",
     "imei",
     "inkdrop",
+    "inputrc",
     "jetbrains",
     "jsonl",
     "junit",
@@ -238,6 +244,7 @@
     "keybase",
     "kubernetes",
     "lazydocker",
+    "libexec",
     "localstack",
     "logrocket",
     "lsof",
@@ -286,6 +293,8 @@
     "rbenv",
     "readlink",
     "redhat",
+    "redoc",
+    "refmt",
     "rekognition",
     "resolv",
     "robo",
@@ -293,6 +302,7 @@
     "rustwasm",
     "scrapinghub",
     "scrapy",
+    "screencapture",
     "sdkman",
     "secretsmanager",
     "sendgrid",
@@ -315,6 +325,7 @@
     "userpool",
     "vendored",
     "videoinput",
+    "vimrc",
     "virtualbox",
     "vpccidr",
     "vscodeintellicode",
@@ -330,6 +341,7 @@
     "workspace",
     "xargs",
     "xcode",
+    "xcodebuild",
     "xhiroga",
     "yyyymmdd",
     "zendesk",
