--- a/.gitconfig
+++ b/.gitconfig
@@ -3,10 +3,10 @@
 [core]
 	# Policy: Just use LF(\n). Editors do not depends on native EOL.
 	autocrlf = false
+	editor = "code --wait"
+	excludesfile = ~/.gitignore_global
 [commit]
 	template = ~/.gitmessage.txt
-[core]
-	excludesfile = ~/.gitignore_global
 [ghq]
 	root = ~/.ghq
 [pull]
