update vscode setting 2021-03-13

--- a/applications/vscode/User/settings.json
+++ b/applications/vscode/User/settings.json
@@ -16,7 +16,6 @@
   "java.configuration.checkProjectSettingsExclusions": false,
   "[javascript]": {
     "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "eslint.format.enable": true,
@@ -33,13 +32,11 @@
   },
   "[typescript]": {
     "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "typescript.format.enable": false,
   "[typescriptreact]": {
     "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[yaml]": {
@@ -144,6 +141,7 @@
     "Pressable",
     "Qiita",
     "Redash",
+    "TAPL", // Book "Type and Programming Languages"
     "Tweetdeck",
     "UUID",
     "Unblended",
@@ -260,14 +258,16 @@
     "mobx",
     "mongodb",
     "mrjob",
+    "mrkdwn", // In Slack rich message, type of text which means Markdown
     "mypage",
     "mypy",
     "mysql",
     "ngrok",
     "nodenv",
-    "nofollow",
+    "nofollow", // In HTML, link type which shows that linked document is not endorsed by the author.
     "nombre",
     "oauth",
+    "ocamlc", // Compiler for OCaml
     "ogasawara",
     "onedrive",
     "onicecandidate",
