--- a/applications/vscode/User/extensions.json
+++ b/applications/vscode/User/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
-        "davidanson.vscode-markdownlint",
+        // Markdown All in One はリスト編集時のインデントのサポートが手厚い。
         "yzhang.markdown-all-in-one"
     ]
 }
