--- a/applications/vscode/User/extensions.json
+++ b/applications/vscode/User/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
+        "esbenp.prettier-vscode",
         // Markdown All in One はリスト編集時のインデントのサポートが手厚い。
         "yzhang.markdown-all-in-one"
     ]
