--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,7 @@
-[include]
-	path = ~/.gitconfig.local
 [core]
 	# Policy: Just use LF(\n). Editors do not depends on native EOL.
 	autocrlf = false
-	excludesfile = ~/.gitignore_global
-[commit]
-	template = ~/.gitmessage.txt
+	excludesfile = ${HOME}/.gitignore_global
 [ghq]
 	root = ~/.ghq
 [pull]
