some word and install brave

--- a/applications/vscode/User/settings.json
+++ b/applications/vscode/User/settings.json
@@ -270,6 +270,7 @@
     "gandi",
     "gcloud",
     "getopt",
+    "getredash",
     "ghcup",
     "gibo",
     "gitlens",
@@ -296,6 +297,7 @@
     "jetbrains",
     "jotai",
     "jsonl",
+    "jsonpath",
     "junit",
     "justincase",
     "justincasetech",
@@ -375,6 +377,7 @@
     "scrapy",
     "screencapture",
     "sdkman",
+    "secretmanager",
     "secretsmanager",
     "sendgrid",
     "serverless",
