--- a/applications/vscode/User/settings.json
+++ b/applications/vscode/User/settings.json
@@ -60,16 +60,17 @@
   "[python]": {
     "editor.formatOnSave": true
   },
-  "[typescript]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "denoland.vscode-deno"
-  },
-  "[typescriptreact]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+  // プロジェクトごとに設定する
+  // "[typescript]": {
+  //   "editor.formatOnSave": true,
+  //   "editor.defaultFormatter": "denoland.vscode-deno"
+  // },
+  // "[typescriptreact]": {
+  //   "editor.formatOnSave": true,
+  //   "editor.defaultFormatter": "esbenp.prettier-vscode"
+  // },
   "[yaml]": {
-    "editor.autoIndent": "none",
+    "editor.autoIndent": "advanced",
     "editor.formatOnSave": true,
     // 職場のCloudFormationTemplateやOpenAPIなど、うっかりフォーマットすると差分が膨大になってしまうため。
     "editor.formatOnSaveMode": "modifications",
@@ -157,43 +158,9 @@
     "yml"
   ],
   "cSpell.userWords": [
-    "Akka",
-    "Arns",
-    "Brewfile",
-    "CNAME",
-    "CORS",
-    "Cognito",
-    "Contentful",
-    "DOCKERHUB",
-    "Datadog",
-    "Earthfile",
-    "Elgato",
-    "FARGATE",
-    "GOPATH",
-    "Hostnames",
-    "Intellij",
-    "Ionicons",
-    "Mandalorian",
-    "Microservices",
-    "PGPASSWORD",
-    "PYTHONIOENCODING",
-    "Pressable",
-    "Qiita",
-    "Redash",
-    "Renderable",
-    "TAPL",
-    "Tweetdeck",
-    "UUID",
-    "Udacity",
-    "Unblended",
-    "Usecase",
-    "VERCEL",
-    "Vercel",
-    "WHOIS",
-    "WORKDIR",
-    "Zenn",
     "adoptopenjdk",
     "adpt",
+    "Akka",
     "amazonaws",
     "amazonses",
     "amzn",
@@ -201,6 +168,7 @@
     "anyenv",
     "apigateway",
     "appdir",
+    "Arns",
     "astroturf",
     "authlete",
     "autofetch",
@@ -218,6 +186,7 @@
     "blankline",
     "boto",
     "botocore",
+    "Brewfile",
     "bson",
     "chmod",
     "chromedriver",
@@ -228,17 +197,22 @@
     "cloudformation",
     "cloudfront",
     "cloudwatch",
+    "CNAME",
     "cocoapods",
     "codebuild",
+    "Cognito",
     "cognitouserpool",
     "configmap",
+    "Contentful",
     "cookiecutter",
     "coqc",
     "coqtop",
     "coreutils",
+    "CORS",
     "creditcard",
     "csvkit",
     "cyberduck",
+    "Datadog",
     "datadoghq",
     "datalake",
     "datetime",
@@ -248,15 +222,19 @@
     "deno",
     "diskwave",
     "docker",
+    "DOCKERHUB",
     "domainkey",
     "dotfiles",
     "dynamodb",
+    "Earthfile",
     "eksctl",
+    "Elgato",
     "entrypoint",
     "epub",
     "esac",
     "esbenp",
     "eval",
+    "FARGATE",
     "fastlane",
     "feacebook",
     "filemaker",
@@ -279,6 +257,7 @@
     "gnubin",
     "gnupg",
     "gnutls",
+    "GOPATH",
     "graalvm",
     "gradlew",
     "graphviz",
@@ -288,12 +267,15 @@
     "hiroaki",
     "hiroga",
     "hoken",
+    "Hostnames",
     "ifeq",
     "ifneq",
     "imageoptim",
     "imei",
     "inkdrop",
     "inputrc",
+    "Intellij",
+    "Ionicons",
     "jetbrains",
     "jotai",
     "jsonl",
@@ -314,7 +296,10 @@
     "lsof",
     "luxon",
     "macos",
+    "Mandalorian",
     "markdownlint",
+    "metacity",
+    "Microservices",
     "microsnitch",
     "minikube",
     "mkdir",
@@ -345,12 +330,14 @@
     "passthrough",
     "payjp",
     "peco",
+    "PGPASSWORD",
     "pino",
     "pipefail",
     "pipenv",
     "postgres",
     "postgresql",
     "preact",
+    "Pressable",
     "printf",
     "println",
     "proto",
@@ -362,12 +349,16 @@
     "pylint",
     "pypi",
     "pyspark",
+    "PYTHONIOENCODING",
+    "Qiita",
     "rbenv",
     "readlink",
+    "Redash",
     "redhat",
     "redoc",
     "refmt",
     "rekognition",
+    "Renderable",
     "replicasets",
     "resolv",
     "robo",
@@ -392,17 +383,28 @@
     "stylelint",
     "submodule",
     "subnet",
+    "TAPL",
+    "tightvncserver",
     "tmux",
+    "Tweetdeck",
+    "Udacity",
     "unarchiver",
+    "Unblended",
     "unist",
     "unittest",
     "untap",
     "upsert",
+    "Usecase",
     "userpool",
+    "UUID",
     "vendored",
+    "Vercel",
+    "VERCEL",
     "videoinput",
     "vimrc",
     "virtualbox",
+    "vncpasswd",
+    "vncserver",
     "vpccidr",
     "vscodeintellicode",
     "vsicons",
@@ -412,15 +414,20 @@
     "weaveworks",
     "webhook",
     "webrtc",
+    "WHOIS",
+    "whonix",
     "willmail",
     "wireshark",
+    "WORKDIR",
     "workspace",
     "xargs",
     "xcode",
     "xcodebuild",
     "xhiroga",
+    "xstartup",
     "yyyymmdd",
     "zendesk",
+    "Zenn",
     "zoomus"
   ],
   "peacock.favoriteColors": [
