--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [core]
 	# Policy: Just use LF(\n). Editors do not depends on native EOL.
 	autocrlf = false
+	# `.gitignore`は`gomplate`で無視されてしまうため。
 	excludesFile = ~/.gitignore_global
 [ghq]
 	root = {{ (datasource "values").git_ghq_root }}
