feat: enable automatic remote setup for git push

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
 	# ff = only
 	rebase = false
 [push]
+	autoSetupRemote = true
 	default = current
 [url "ssh://git@github.com/"]
 	insteadOf = https://github.com/
