--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [branch]
-	autoSetupMerge = always
+	autoSetupMerge = true
 [core]
 	# Policy: Just use LF(\n). Editors do not depends on native EOL.
 	autocrlf = false
