feat: update tmux.conf. no key bind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,8 @@
-
-# prefix key should be accessible and not be conflicted with `got to begginning of the line.`
-unbind C-b
-set -g prefix C-s
-bind s send-prefix
-
+# --- Clipboard + Mouse -----------------------------------
 set -g default-terminal screen-256color
 set -g mouse on
-set -s set-clipboard on
+set -s set-clipboard external
+setw -g mode-keys vi
 
 # disable "release mouse drag to copy and exit copy-mode", ref: https://github.com/tmux/tmux/issues/140
 unbind -T copy-mode-vi MouseDragEnd1Pane
@@ -20,8 +16,8 @@ bind -T copy-mode-vi MouseDown1Pane select-pane\; send-keys -X clear-selection
 # can trigger copy-mode to exit when copy-mode is entered by MouseDrag1Pane
 bind -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -eM\" \"send-keys -M\"' 'copy-mode -eM'
 
-### Note
-# - set = set-option
-# - set -g(lobal) -a(ppend values to existing setting)
-# - bind = bind-key
-# - unbind = unbind-key
+# --- Plugins ---------------------------------------------
+set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'lost-melody/tmux-command-palette'
+
+run '$HOMEBREW_PREFIX/opt/tpm/share/tpm/tpm'
