chore: no ssh, ghq

--- a/.gitconfig
+++ b/.gitconfig
@@ -19,13 +19,16 @@
 [push]
 	autoSetupRemote = true
 	default = current
-[url "ssh://git@github.com/"]
-	insteadOf = https://github.com/
-[url "ssh://git@hf.co/"]
-	insteadOf = https://huggingface.co/
+# If SSH is substituted in an automated process, such as when building a package, the build may fail.
+# [url "ssh://git@github.com/"]
+# 	insteadOf = https://github.com/
+# [url "ssh://git@hf.co/"]
+# 	insteadOf = https://huggingface.co/
 [alias]
 	delete-merged-branch = !git branch --merged | egrep -v '\\*|main|master|development' | xargs git branch -d
 	# https://qiita.com/ucan-lab/items/97c53a1a929d2858275b
 [user]
 	name = {{ (datasource "values").git_user_name }}
 	email = {{ (datasource "values").git_user_email }}
+[ghq]
+root = ~/Documents
