--- a/.gitconfig
+++ b/.gitconfig
@@ -19,11 +19,11 @@
 [push]
 	autoSetupRemote = true
 	default = current
-# If SSH is substituted in an automated process, such as when building a package, the build may fail.
-# [url "ssh://git@github.com/"]
-# 	insteadOf = https://github.com/
-# [url "ssh://git@hf.co/"]
-# 	insteadOf = https://huggingface.co/
+# If SSH is substituted in an automated process, such as when building a package, the build sometimes fail.
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
+[url "ssh://git@hf.co/"]
+	insteadOf = https://huggingface.co/
 [alias]
 	delete-merged-branch = !git branch --merged | egrep -v '\\*|main|master|development' | xargs git branch -d
 	# https://qiita.com/ucan-lab/items/97c53a1a929d2858275b
